test/compile_errors/err_atomic_load_release.w
//! expect-error: load cannot use Release or AcqRel ordering

use std.sync

var cell: Atomic[i32]

fn main:
    let _ = cell.load(.Release)
